--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,21 +1,27 @@
-
-
-<div *ngIf="!current">no data</div>
+<div *ngIf="!current">
+  no data
+</div>
 <div *ngIf="current">
   <div>
-    <div class="mat-title no-margin">
-      {{current.city}}, {{current.country}}
+    <div fxLayout="row">
+      <div fxFlex="66%" class="mat-title no-margin">{{current.city}}, {{current.country}}</div>
+      <div fxFlex class="right mat-h3 no-margin">
+        {{current.date | date: 'EEEE'}}<br>
+        {{current.date | date: 'MMM d'}} {{getOrdinal(current.date)}}
+      </div>
     </div>
-    <div>
-
-      {{current.date | date: 'fullDate'}}
+    <div fxLayout="row" fxLayoutAlign="center center">
+      <div fxFlex="55%"> <img src="{{current.image}}" style="zoom: 175%"> </div>
+      <div fxFlex class="right mat-h3 no-margin">
+        <p class="mat-display-3">
+          {{current.temperature | number : '1.0-0'}}
+          <span class="mat-display-1 unit"> ˚ F</span>
+        </p>
+      </div>
     </div>
-    <div>
-      <img src="{{current.image}}">
-      <span>{{current.temperature | number : '1.0-0'}} °F </span>
-    </div>
-    <div>
+    <div fxLayoutAlign="center" class="mat-caption">
       <span>{{current.description}}</span>
     </div>
   </div>
+
 </div>
