--- a/src/app/city-search/city-search.component.html
+++ b/src/app/city-search/city-search.component.html
@@ -5,5 +5,9 @@
     </mat-label>
     <mat-icon matPrefix>search</mat-icon>
     <input matInput aria-label="City or Zip" [formControl]="search">
+    <mat-hint>Specify country code like 'Paris, US'</mat-hint>
+    <mat-error *ngIf="search.invalid">
+      Type more than one character to search
+    </mat-error>
   </mat-form-field>
 </form>
