--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="!current">
+<!-- <div *ngIf="!current$">
   no data
-</div>
-<div *ngIf="current">
+</div> -->
+<div *ngIf="current$ | async as current">
   <div>
     <div fxLayout="row">
       <div fxFlex="66%" class="mat-title no-margin">{{current.city}}, {{current.country}}</div>
@@ -23,5 +23,8 @@
       <span>{{current.description}}</span>
     </div>
   </div>
-
 </div>
+
+<ng-template #loading>
+  Loading...
+  </ng-template>
